--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,11 @@
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 .container {
-    width: 1000px;
-    margin: auto;
-}
-.header-text {
-    text-align: center;
-    font-size: 36px;
-    font-family: 'Roboto Condensed', sans-serif;
-    padding-top: 15px;
-    position: sticky;
-    top: 0;
-    background-color: white;
-}
-.block-photo {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.photos {
-    padding: 10px 10px;
+  width: 1000px;
+  margin: auto;
 }
 .photos img:hover {
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-.footer {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    border-top: 2px solid lightgray;
-    width: 1000px;
-    bottom: 0;
-    position: absolute;
-    background-color: white;
-}
-
